--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -8,3 +8,7 @@ img.swagoo-img-thumbnail {
     padding: .3rem;
     width: 10rem;
 }
+
+figure {
+    margin: 3rem 0;
+}
